--- a/src/app/welcome/welcomePageStyles.module.scss
+++ b/src/app/welcome/welcomePageStyles.module.scss
@@ -1,26 +1,31 @@
 @import '../../styles/globals.scss';
 
 .welcome-page {
-  position: relative;
-  top: 100px;
   height: fit-content;
   background-color: $bgc-dark-blue;
   color: $light-blue-200;
   padding: 20px;
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .section-welcome {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   gap: 10px;
+  margin-bottom: 40px;
 
   &__info-container {
     width: 50%;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
   }
 
   &__title {
@@ -35,11 +40,14 @@
     font-size: 20px;
   }
 
+  &__img {
+    margin: 0px 40px;
+  }
+
   &__logos-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 30%;
     font-size: 60px;
   }
 
@@ -65,5 +73,20 @@
       cursor: pointer;
       background-color: #ddd6d6;
     }
+  }
+}
+
+.section-team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+  &__title {
+    font-size: 40px;
+  }
+
+  &__subtitle {
+    font-size: 20px;
   }
 }
