--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -10,4 +10,6 @@ body {
   justify-content: space-between;
   width: 100%;
   min-height: 100vh;
+  height: fit-content;
+  background-color: #021e40;
 }
