--- a/src/app/welcome/welcomePageStyles.module.scss
+++ b/src/app/welcome/welcomePageStyles.module.scss
@@ -40,7 +40,7 @@
     font-size: 20px;
   }
 
-  &__img {
+  &__logo {
     margin: 0px 40px;
   }
 
@@ -88,5 +88,42 @@
 
   &__subtitle {
     font-size: 20px;
+  }
+}
+
+.section-course {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  gap: 10px;
+  margin-bottom: 40px;
+
+  &__title {
+    font-size: 40px;
+  }
+
+  &__subtitle {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  &__description {
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    gap: 15px;
+    width: 50%;
+  }
+
+  &__description-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__logo {
+    width: 30%;
   }
 }
