--- a/src/app/welcome/welcomePageStyles.module.scss
+++ b/src/app/welcome/welcomePageStyles.module.scss
@@ -91,6 +91,39 @@
   }
 }
 
+.section-project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+  gap: 15px;
+
+  &__title {
+    font-size: 40px;
+  }
+
+  &__description {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 18px;
+    list-style-position: inside;
+    line-height: 30px;
+  }
+
+  &__subtitle {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  &__list {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+}
+
 .section-course {
   display: flex;
   flex-direction: column;
@@ -115,6 +148,15 @@
     font-size: 18px;
     gap: 15px;
     width: 50%;
+
+    &-title {
+      font-weight: 600;
+      font-size: 20px;
+    }
+
+    &-text {
+      margin-top: 20px;
+    }
   }
 
   &__description-container {
