--- a/src/components/TeamList/TeamListStyles.module.scss
+++ b/src/components/TeamList/TeamListStyles.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   justify-content: space-between;
   gap: 40px;
+  flex-wrap: wrap;
 }
 
 .member-container {
@@ -22,6 +23,21 @@
   min-height: 900px;
   justify-content: space-between;
   transition: 0.6s;
+
+  @media (max-width: 1650px) {
+    width: 30%;
+    min-height: 1000px;
+  }
+
+  @media (max-width: 1200px) {
+    width: 30%;
+    min-height: 1000px;
+  }
+
+  @media (max-width: 950px) {
+    width: 100%;
+    min-height: 1000px;
+  }
 
   &:hover {
     scale: 1.04;
