--- a/src/app/[locale]/welcome/welcomePageStyles.module.scss
+++ b/src/app/[locale]/welcome/welcomePageStyles.module.scss
@@ -1,12 +1,8 @@
-@import '../../styles/globals.scss';
-
 .welcome-page {
   height: fit-content;
-  background-color: $bgc-dark-blue;
-  color: $light-blue-200;
   padding: 20px;
   display: flex;
-  gap: 40px;
+  gap: 60px;
   flex-direction: column;
   max-width: 1440px;
   margin: 0 auto;
@@ -22,7 +18,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  margin-bottom: 40px;
+  margin-top: 40px;
 
   &__info-container {
     width: 50%;
@@ -43,6 +39,7 @@
 
   &__title {
     font-size: 50px;
+    margin: 0px;
 
     @media (max-width: 550px) {
       font-size: 40px;
@@ -51,6 +48,7 @@
 
   &__subtitle {
     font-size: 25px;
+    margin: 0;
 
     @media (max-width: 550px) {
       font-size: 18px;
@@ -59,6 +57,7 @@
 
   &__description {
     font-size: 20px;
+    margin: 0;
 
     @media (max-width: 550px) {
       font-size: 15px;
@@ -98,12 +97,15 @@
     height: 35px;
     text-decoration: none;
     text-align: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
     padding: 10px;
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
-    color: $blue-primary;
     border-radius: 5px;
     transition: background-color 0.4s;
+    color: black;
 
     &:hover {
       cursor: pointer;
@@ -124,6 +126,7 @@
 
   &__title {
     font-size: 40px;
+    margin: 0px;
 
     @media (max-width: 550px) {
       font-size: 30px;
@@ -132,6 +135,7 @@
 
   &__subtitle {
     font-size: 20px;
+    margin: 0px;
   }
 }
 
@@ -139,8 +143,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 40px;
   gap: 15px;
+
+  p {
+    margin: 0;
+  }
 
   @media (max-width: 550px) {
     margin-bottom: 20px;
@@ -148,6 +155,7 @@
 
   &__title {
     font-size: 40px;
+    margin: 0px;
 
     @media (max-width: 550px) {
       font-size: 30px;
@@ -161,6 +169,7 @@
     font-size: 18px;
     list-style-position: inside;
     line-height: 30px;
+    margin: 0px;
 
     @media (max-width: 550px) {
       font-size: 15px;
@@ -170,6 +179,7 @@
   &__subtitle {
     font-size: 20px;
     font-weight: 600;
+    margin: 0px;
 
     @media (max-width: 550px) {
       font-size: 18px;
@@ -180,7 +190,9 @@
     display: flex;
     gap: 15px;
     flex-direction: column;
-    margin-bottom: 40px;
+    margin: 0px;
+    margin-bottom: 20px;
+    padding: 0px;
 
     @media (max-width: 550px) {
       margin-bottom: 10px;
@@ -194,7 +206,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
   gap: 10px;
   margin-bottom: 40px;
 
@@ -210,6 +221,7 @@
 
   &__title {
     font-size: 40px;
+    margin: 0;
 
     @media (max-width: 550px) {
       font-size: 30px;
@@ -219,6 +231,7 @@
   &__subtitle {
     font-size: 20px;
     text-align: center;
+    margin: 0;
   }
 
   &__description {
@@ -227,6 +240,7 @@
     font-size: 18px;
     gap: 15px;
     width: 50%;
+    margin: 0;
 
     @media (max-width: 770px) {
       width: 100%;
