feat: implement the query editor and json viewer components for the playground

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,7 +7,7 @@
   margin-top: auto;
   min-height: 150px;
   height: fit-content;
-  background-color: $bgc-dark-blue;
+  background-color: $blue-primary;
   padding: 20px;
 
   .authors {
