--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,8 +10,9 @@
   align-items: center;
   gap: 40px;
   height: 100px;
-  background-color: $bgc-dark-blue;
+  background-color: $blue-primary;
   padding: 10px 20px;
+  z-index: 3;
 
   .homeBtn {
     width: 50px;
