--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,3 +1,5 @@
+@use './globals.scss' as *;
+
 .reset {
   box-sizing: border-box;
   padding: 0;
@@ -10,4 +12,7 @@ body {
   justify-content: space-between;
   width: 100%;
   min-height: 100vh;
+  margin-top: 100px;
+  background-color: $bgc-dark-blue;
+  color: #fff;
 }
