--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,6 @@
 $bgc-dark-blue: #021e40;
-$blue-primary: #012545;
+$blue-primary: #072f55;
 $light-blue-200: #d4edff;
 $secondary-blue-500: #44b7b7;
 $link-hover-color: #ddd6d6;
+$btn-hover: #009688;
