feat: implement the query editor and json viewer components for the playground

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   gap: 40px;
   height: 100px;
-  background-color: $bgc-dark-blue;
+  background-color: $blue-primary;
   padding: 10px 20px;
   z-index: 99;
 
