--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,3 +1,5 @@
+@use './globals.scss' as *;
+
 .reset {
   box-sizing: border-box;
   padding: 0;
@@ -11,4 +13,6 @@ body {
   width: 100%;
   min-height: 100vh;
   height: fit-content;
+  background-color: $bgc-dark-blue !important;
+  color: #fff;
 }
