--- a/src/components/CodeEditor/CodeEditor.module.scss
+++ b/src/components/CodeEditor/CodeEditor.module.scss
@@ -1,6 +1,14 @@
+@use '../../styles/globals.scss' as bp;
+
 .codeEditor {
   display: flex;
   width: 500px;
+
+  @media screen and (max-width: bp.$sm) {
+    flex-direction: column;
+    gap: 10px;
+    width: 90%;
+  }
 
   .monacoEditor {
     width: 100%;
