--- a/src/components/CodeEditor/EditorButtons/EditorButtons.module.scss
+++ b/src/components/CodeEditor/EditorButtons/EditorButtons.module.scss
@@ -7,6 +7,10 @@
   margin-left: 10px;
   margin-right: 10px;
 
+  @media screen and (max-width: $sm) {
+    flex-direction: row;
+  }
+
   .btn {
     background: transparent;
     border: 0;
