--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -13,6 +13,6 @@ body {
   width: 100%;
   min-height: 100vh;
   margin-top: 100px;
-  background-color: $bgc-dark-blue;
+  background-color: $bgc-dark-blue !important;
   color: #fff;
 }
