--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,3 +4,9 @@ $light-blue-200: #d4edff;
 $secondary-blue-500: #44b7b7;
 $link-hover-color: #ddd6d6;
 $btn-hover: #009688;
+
+$xs: 320px;
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
