--- a/src/components/TeamList/TeamListStyles.module.scss
+++ b/src/components/TeamList/TeamListStyles.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #1769aa;
+  background-color: $blue-primary;
   padding: 20px;
   border-radius: 5px;
   gap: 20px;
