feat: graphiql playground implementation (query editor and json viewer)  (#14)
* feat: implement the query editor and json viewer components for the playground

* refactor: format code

* feat: add adaptive layout for the graphql playground and global breakpoints

* feat: add prettify functionality to the editor

* feat: welcome page (#15)

* feat: add welcome section

* feat: add section team

* feat: add section about course

* feat: add section about project

* feat: update adaptive

* feat: redirect in case of expired token

* fix: fix styles page

* feat: add Russian translations

* refactor: rename file with split function

* refactor: delete file about team

* refactor: split the page into components

* feat: implement the query editor and json viewer components for the playground

* refactor: format code

* feat: add adaptive layout for the graphql playground and global breakpoints

* feat: add prettify functionality to the editor

---------

Co-authored-by: Vika Rashchepkina <134319002+qwgfsehte@users.noreply.github.com>

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,7 +7,7 @@
   margin-top: auto;
   min-height: 150px;
   height: fit-content;
-  background-color: $bgc-dark-blue;
+  background-color: $blue-primary;
   padding: 20px;
 
   .authors {
@@ -16,7 +16,7 @@
     align-items: center;
     gap: 25px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: $md) {
       flex-direction: column;
       gap: 10px;
     }
