--- a/src/components/SectionDocs/DocsStyles.module.scss
+++ b/src/components/SectionDocs/DocsStyles.module.scss
@@ -2,13 +2,14 @@
 
 .docs-section {
   background-color: $blue-primary;
-  width: 20%;
+  width: 30%;
   padding: 20px;
   border-radius: 15px;
   min-height: 550px;
   height: 500px;
   overflow: scroll;
   position: relative;
+  font-size: 15px;
 
   @media (max-width: 1295px) {
     width: 100%;
@@ -58,6 +59,11 @@
     p {
       margin: 0;
     }
+
+    &__title {
+      text-align: center;
+      font-size: 20px;
+    }
   }
 }
 
@@ -71,9 +77,16 @@
     gap: 5px;
     flex-direction: column;
   }
-}
 
-.title {
-  text-align: center;
-  font-size: 20px;
+  &__header {
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 17px;
+  }
+
+  &__item-title {
+    font-size: 17px;
+  }
 }
