feat: add buttons clear and sort history

--- a/src/app/[locale]/history/historyPageStyles.module.scss
+++ b/src/app/[locale]/history/historyPageStyles.module.scss
@@ -78,6 +78,7 @@
     background-color: transparent;
     cursor: pointer;
     color: $secondary-blue-500;
+    word-break: break-word;
 
     &:hover {
       color: $btn-hover;
